Bug 424901 - "Force filesystem indexing" feature is incorrectly marked as disabled after Elisa is restarted
Summary: "Force filesystem indexing" feature is incorrectly marked as disabled after E...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.07.80
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-08-01 17:08 UTC by Patrick Silva
Modified: 2020-12-15 15:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-08-01 17:08:55 UTC
SUMMARY
For some reason Elisa can not find some mp3 files on my system, so I tried "Force filesystem indexing" feature and noticed that it is uncheked again after I restart Elisa.

STEPS TO REPRODUCE
1. open Elisa
2. open Elisa settings and enable "Force filesystem indexing" option
3. restart Elisa and open its settings again

OBSERVED RESULT
"Force filesystem indexing" feature is disabled

EXPECTED RESULT
"Force filesystem indexing" feature should remain enabled after Elisa to be restarted

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-11-11 06:08:06 UTC
Confirmed.
Comment 2 Nate Graham 2020-12-10 14:43:26 UTC
FWIW it seems that the setting is saved and loaded correctly, but the UI is not updating correctly.
Comment 3 Bug Janitor Service 2020-12-12 21:42:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/201
Comment 4 justin.luque 2020-12-15 01:01:20 UTC
This is happening with me as well.
Comment 5 Nate Graham 2020-12-15 15:56:39 UTC
Git commit a90eeb04729656804a472f071874649b70223311 by Nate Graham, on behalf of Matthieu Gallien.
Committed on 15/12/2020 at 15:56.
Pushed by ngraham into branch 'release/20.12'.

do not mishandle the force file system option

fix configuration class used by the configuration dialog to not forget
the correct value for the option

clean uneeded overwrite of default value handling in the configuration
file (no need to do it by code just use KConfig)

M  +1    -1    src/localFileConfiguration/elisaconfigurationdialog.cpp
M  +0    -3    src/musiclistenersmanager.cpp

https://invent.kde.org/multimedia/elisa/commit/a90eeb04729656804a472f071874649b70223311