do not mishandle the force file system option

fix configuration class used by the configuration dialog to not forget
the correct value for the option

clean uneeded overwrite of default value handling in the configuration
file (no need to do it by code just use KConfig)

BUG: 424901